fix quantity align

--- a/src/app/layout/basket/modals/detail-product/detail-magic-look/detail-magic-look.component.scss
+++ b/src/app/layout/basket/modals/detail-product/detail-magic-look/detail-magic-look.component.scss
@@ -16,11 +16,6 @@
   .display-row {
     display: flex;
     justify-content: space-between;
-
-    .spec-params {
-      margin-left: -4em;
-    }
-
   }
 
   .padding-params {
